# maliketh

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS.md  create_release.sh  insomnia.json
.github/workflows/: docker-image.yml  makefile.yml
client/: admin.json  comms.py  config.py  crypto.py  maliketh_client  opcodes.py  pyproject.toml  rmq.py
client/cli/: banner.py  cli.py  command.py  commands.py  completer.py  help.py  interact.py  logging.py  style.py
design/: implant.md  opcodes.md  operator.md  profile.md  task.md
design/specs/: README.md  implant-c2-http.md  operator-c2-http.md
design/structs/: README.md
go_implant/: .gitignore  Makefile  README.md  go.mod  go.sum
go_implant/cmd/: main.go
implant/: Makefile  build-release.ps1  build-release.sh  hash_import.c  schtask.cpp
implant/include/: antidebug.h  antisandbox.h  command.h  configparser.h  constants.h  crypto.h  debug.h  handlers.h  httpclient.h  implant.h  opcode.h  profile.h  profileparser.h  readbytes.h  schtask.h  task.h  utils.h
implant/src/: antidebug.cpp  antisandbox.cpp  command.cpp  crypto.cpp  handlers.cpp  httpclient.cpp  implant.cpp  loader.cpp  main.cpp  profile.cpp  readbytes.cpp  schtask.cpp  (+2 more)
nginx/: Dockerfile  docker-compose.yml  nginx.conf
server/: .env.example  Dockerfile  Dockerfile.c2  Dockerfile.make_db  Dockerfile.operator  MyCertificate.crt  MyKey.key  README.md  app.py  bootstrap_db.sh  create_operator.py  docker-compose.yml  make_db.py  pyproject.toml  requirements.txt  rmq_test.py  test_client.py  test_crypto.py
server/config/admin/: creds.yaml  routes.yaml
server/config/profiles/: default.yaml
server/instance/: c2.db
server/maliketh/: app.py  buildapp.py  config.py  crypto.py  listener.py  models.py  opcodes.py  profile.py
server/maliketh/builder/: builder.py
server/maliketh/crypto/: aes.py  ec.py  utils.py  x509.py
server/maliketh/listeners/: admin.py  c2.py  utils.py
server/maliketh/logging/: gunicorn.py  standard_logger.py
server/maliketh/operator/: config.py  rmq.py
(+28 files in other folders)
