[tool.poetry]
name = "maliketh"
version = "0.2.0"
description = "Maliketh command and control server"
authors = ["Carter Brainerd <0xCB@protonmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
flask = "2.2.2"
flask-sqlalchemy = "3.0.2"
greenlet = "2.0.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
requests = "2.28.1"
sqlalchemy = "1.4.42"
urllib3 = "1.26.12"
werkzeug = "2.2.2"
pyyaml = "6.0"
colorama = "0.4.6"
cryptography = "39.0.2"
pynacl = "1.5.0"
psycopg2-binary = "2.9.5"
pycryptodome = "3.17"
pika = "1.3.1"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
autoflake = "^2.2.1"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
